tests/spirits/errors/missing_exegesis.dol
// Test: Missing docs block
// Expected: Should fail - docs is mandatory

pub gen MissingExegesis {
    has id: UInt64
    has name: string
}

// ERROR: No docs block!
